[gd_scene load_steps=2 format=3 uid="uid://c3v8m2k1p9n0x"]

[ext_resource type="Script" path="res://conspiracy_board/scripts/document_viewer.gd" id="1_documentviewer"]

[node name="DocumentViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_documentviewer")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderHBox" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Document Title"

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HeaderHBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="ToggleButtonHBox" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ToggleModeButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ToggleButtonHBox"]
layout_mode = 2
text = "Show Full Text"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentLabel" type="RichTextLabel" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HeaderHBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/ToggleButtonHBox/ToggleModeButton" to="." method="_on_toggle_mode_button_pressed"]
[connection signal="gui_input" from="Overlay" to="." method="_on_overlay_gui_input"]
